tests/errors/result_ambiguous_from.milo
// @error: ambiguous From conversion

enum IoError {
    NotFound(string),
}

enum AppError {
    Io(IoError),
    AlsoIo(IoError),
}

fn readFile(path: string): Result<string, IoError> {
    return Result.Ok(path)
}

fn process(path: string): Result<string, AppError> {
    let s = readFile(path)?
    return Result.Ok(s)
}

fn main(): i32 {
    return 0
}
